--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <canvas width="400" height="400" id="board"></canvas>
+    <script src="static/js/player.js"></script>
     <script src="static/js/board.js"></script>
   </body>
 </html>
