--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <canvas width="400" height="400" id="board"></canvas>
     <script src="static/js/player.js"></script>
     <script src="static/js/board.js"></script>
+    <script src="static/js/game.js"></script>
   </body>
 </html>
